# Programacion-2

EjemploTeoriaAVL/: avl.c  avl.h  main_AVL.c
EjemploTeoriaArboles/: CMakeLists.txt  abb.c  abb.h  arboles_punteros.c  arboles_punteros.h  main.c  main2.c
EjemploTeoriaColas/: CMakeLists.txt  colas_arrays.c  colas_arrays.h  colas_prioridad.c  colas_prioridad.h  colas_punteros.c  colas_punteros.h  main.c
EjemploTeoriaListas/: CMakeLists.txt  listas_array.c  listas_array.h  listas_dobles.c  listas_dobles.h  listas_o_arrays.c  listas_o_arrays.h  listas_o_punteros.c  listas_o_punteros.h  listas_punteros.c  listas_punteros.h  main.c
EjerciciosRecursividad/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio6.c
P0/Rational/: CMakeLists.txt  main.c  rational_pointer.c  rational_pointer.h  rational_struct.c  rational_struct.h
P1/: dynamic_list.c  dynamic_list.h  main.c  script.sh  static_list.c  static_list.h  types.h
P1/EjemploTeoriaPilas/: CMakeLists.txt  pilas_array.c  pilas_array.h  pilas_punteros.c  pilas_punteros.h
P2/: config.cmake  jury_list.c  jury_list.h  main.c  participant_list.c  participant_list.h  types.h
